--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1270,7 +1270,6 @@
 - module-name: 'pandas._testing'
   anti-bloat:
     - description: 'remove pytest testing framework'
-
       change_function:
         'ensure_clean': "'(lambda: None)'"
         # TODO: See pandas._testing._io TODO as well.
@@ -1282,7 +1281,6 @@
 - module-name: 'pandas._testing._io'
   anti-bloat:
     - description: 'remove pytest testing framework'
-
       change_function:
         'network': "'(lambda: None)'"
         # TODO: Actually it would be nice to specify "un-callable" rather than
@@ -1295,9 +1293,9 @@
 - module-name: 'pandas.compat._optional'
   anti-bloat:
     - description: 'remove useless distutils usage'
-      replacements:
-        'distutils.version.LooseVersion(version) < minimum_version': "'False'"
-        'import distutils.version': "''"
+      replacements_plain:
+        'distutils.version.LooseVersion(version) < minimum_version': 'False'
+        'import distutils.version': ''
 
 - module-name: 'pandas.compat.numpy'
   anti-bloat:
