Plugins: Handle GUI plugins more sensible
* When the tk-inter plugin is enabled, we no longer run detectors for other GUI plugins
  like "pyside6".

* Generalized the warning given by Qt plugins previously for use by all
  plugins and use it in tk-inter where then now the "no-qt" plugin is
  pointed out.

* Recommend the console for a package inclusion of the GUI packages
  only when the plugin is active, otherwise unused packages can warn.

* Added console hint for Python3 tkinter as well, had this only for Python2
  so far.

* Removed dead code from plugins module and plugin interface.

--- a/nuitka/plugins/standard/stdlib3.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/stdlib3.nuitka-package.config.yml
@@ -299,6 +299,10 @@
   implicit-imports:
     - depends:
         - '_tkinter'
+  options:
+    checks:
+      - console: 'recommend'
+        when: 'plugin("tk-inter")'
 
 - module-name: 'tokenize'
   anti-bloat:
