--- a/nuitka/plugins/standard/stdlib2.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/stdlib2.nuitka-package.config.yml
@@ -65,12 +65,11 @@
   implicit-imports:
     - depends:
         - '_tkinter'
-
   options:
     checks:
       - console: 'recommend'
-
         macos_bundle_as_onefile: 'yes'
+        when: 'plugin("tk-inter")'
 
 - module-name: 'xml.sax.xmlreader'
   anti-bloat:
