Plugins: Handle GUI plugins more sensible
* When the tk-inter plugin is enabled, we no longer run detectors for other GUI plugins
  like "pyside6".

* Generalized the warning given by Qt plugins previously for use by all
  plugins and use it in tk-inter where then now the "no-qt" plugin is
  pointed out.

* Recommend the console for a package inclusion of the GUI packages
  only when the plugin is active, otherwise unused packages can warn.

* Added console hint for Python3 tkinter as well, had this only for Python2
  so far.

* Removed dead code from plugins module and plugin interface.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -225,6 +225,11 @@
     - depends:
         - '_curses'
 
+- module-name: 'customtkinter'
+  data-files:
+    dirs:
+      - 'assets'
+
 - module-name: 'cv2'
   data-files:
     dirs:
@@ -1743,18 +1748,20 @@
     checks:
       - description: 'PyQt5 is a GUI framework'
         console: 'recommend'
+        when: 'plugin("pyqt5")'
       - description: 'PyQt5 cannot be used without bundle'
         macos_bundle: 'yes'
-        when: 'macos and not anaconda'
+        when: 'macos and not anaconda and plugin("pyqt5")'
       - description: 'PyQt5 cannot be signed unless onefile'
         macos_bundle_as_onefile: 'yes'
-        when: 'macos'
+        when: 'macos and plugin("pyqt5")'
 
 - module-name: 'PyQt6'
   options:
     checks:
       - description: 'PyQt6 is a GUI framework'
         console: 'recommend'
+        when: 'plugin("pyqt6")'
 
 - module-name: 'pyqtgraph'
   data-files:
@@ -1893,9 +1900,10 @@
     checks:
       - description: 'PySide2 is a GUI framework'
         console: 'recommend'
+        when: 'plugin("pyside2")'
       - description: 'PySide2 cannot be signed unless onefile'
         macos_bundle_as_onefile: 'yes'
-        when: 'macos'
+        when: 'macos and plugin("pyside2")'
   import-hacks:
     - find-dlls-near-module:
         - 'shiboken2'
@@ -1905,6 +1913,7 @@
     checks:
       - description: 'PySide6 is a GUI framework'
         console: 'recommend'
+        when: 'plugin("pyside6")'
   import-hacks:
     - find-dlls-near-module:
         - 'shiboken6'
