Standalone: Added dependencies for "dependency_injector" package

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -325,6 +325,22 @@
       replacements_plain:
         '__version__ = get_distribution(__name__).version': 'raise DistributionNotFound'
 
+- module-name: 'dependency_injector._cwiring'
+  implicit-imports:
+    - depends:
+        - 'asyncio'
+
+- module-name: 'dependency_injector.containers'
+  implicit-imports:
+    - depends:
+        - 'six'
+        - 'dependency_injector.wiring'
+
+- module-name: 'dependency_injector.providers'
+  implicit-imports:
+    - depends:
+        - 'dependency_injector.errors'
+
 - module-name: 'dipy'
   anti-bloat:
     - description: 'remove dipy and numpy testing framework'
