--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1015,6 +1015,11 @@
     - description: 'remove numba testing reference'
       change_function:
         'test': 'un-callable'
+  options:
+    checks:
+      - description: "Numba is not yet working with Nuitka standalone, recommended to use '--noinclude-numba-mode'"
+        support_info: 'warning'
+        when: 'not use_numba and standalone'
 
 - module-name: 'numba.core.caching'
   anti-bloat:
@@ -2229,6 +2234,27 @@
     - depends:
         - 'scipy.sparse.csgraph._validation'
 
+- module-name: 'scipy.sparse.linalg._expm_multiply'
+  anti-bloat:
+    - description: 'remove numba reference (via sparse)'
+      replacements_plain:
+        'import sparse': 'raise ImportError'
+      when: 'not use_numba and standalone'
+
+- module-name: 'scipy.sparse.linalg._matfuncs'
+  anti-bloat:
+    - description: 'remove numba reference (via sparse)'
+      replacements_plain:
+        'import sparse': 'raise ImportError'
+      when: 'not use_numba and standalone'
+
+- module-name: 'scipy.sparse.linalg.matfuncs'
+  anti-bloat:
+    - description: 'remove numba reference (via sparse)'
+      replacements_plain:
+        'import sparse': 'raise ImportError'
+      when: 'not use_numba and standalone'
+
 - module-name: 'scipy.spatial'
   implicit-imports:
     - depends:
@@ -2711,6 +2737,13 @@
   data-files:
     dirs:
       - 'lib'
+
+- module-name: 'sparse'
+  options:
+    checks:
+      - description: "Numba (via sparse) is not yet working with Nuitka standalone, recommended to use '--noinclude-numba-mode'"
+        support_info: 'warning'
+        when: 'not use_numba and standalone'
 
 - module-name: 'sphinx.util.docutils'
   anti-bloat:
