Standalone: Added support for "cefpython3"
* This needs DLLs and data files to work properly.

* Also a first usage of the "exe" inclusion feature, that we had
  added, but not used so far.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -140,6 +140,26 @@
     patterns:
       - 'VERSION'
 
+- module-name: 'cefpython3'
+  data-files:
+    dirs:
+      - 'locales'
+    patterns:
+      - '*.bin'
+      - '*.pak'
+      - '*.dat'
+
+  dlls:
+    - from_filenames:
+        prefixes:
+          - 'subprocess'
+        executable: 'yes'
+      when: 'win32'
+    - from_filenames:
+        prefixes:
+          - ''
+      when: 'win32'
+
 - module-name: 'certifi'
   data-files:
     patterns:
