Fix, very old "importlib_metadata" would not work without this
* Has a recursive dependency that prevents the module from loading at
  runtime in standalone mode. We can just solve it like this with
  putting the version as a replacement.

* This adds the version taking function to the replacement contexts.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -742,6 +742,13 @@
     - depends:
         - 'h5py.utils'
 
+- module-name: 'importlib_metadata'
+  anti-bloat:
+    - description: 'remove useless metadata usage'
+      replacements:
+        '__version__ = version(__name__)': 'repr(version("importlib_metadata"))'
+      when: 'standalone'
+
 - module-name: 'importlib_resources'
   data-files:
     patterns:
