Multidist: Initial work to expand command line parsing and handling
* Produce a fake main binary code and allow using that for main module.

* Handle positional and command line main arguments both. Not all checks
  that will be needed are done yet.

* Allow multiple main paths for the import scan.

* Cleaned up some plugin interactions where that happens

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,6 +98,7 @@
         "appdirs",
         "asyncgen",
         "backslashreplace",
+        "basenames",
         "basestring",
         "binaryfunc",
         "bitor",
@@ -201,6 +202,7 @@
         "MSVC",
         "msys",
         "Mult",
+        "multidist",
         "Namify",
         "NBOOL",
         "no_docstrings",
