Cleanup, use factory module for namedtuples
* When inheriting, having "__slots__" seems mandatory.

* We should cleanup our existing namedtuples to have proper methods and use this.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -204,6 +204,7 @@
         "Mult",
         "multidist",
         "Namify",
+        "namedtuples",
         "NBOOL",
         "no_docstrings",
         "noelf",
