--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1788,6 +1788,11 @@
         - 'pyglet.text'
         - 'pyglet.window'
 
+- module-name: 'pygments.styles'
+  implicit-imports:
+    - depends:
+        - '.*'
+
 - module-name: 'pygsheets'
   data-files:
     dirs:
