Support for tls_client

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -3936,3 +3936,10 @@
         '_skip_under_py2': "'(lambda test_method: None)'"
         '_skip_under_py3k': "'(lambda test_method: None)'"
       when: 'not use_unittest'
+      
+- module-name: 'tls_client.cffi'
+  dlls:
+    - from_filenames:
+        relative_path: 'dependencies'
+        prefixes:
+          - 'tls-client'
