Optimization: Prepare work for faster subclass checks
* Since it's not actually going to be faster without more code available,
  we disable it for now.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -264,6 +264,7 @@
         "Scons",
         "setattrofunc",
         "Setuptools",
+        "subclasscheck",
         "sourcery",
         "ssizeargfunc",
         "startswith",
