Added sqlalchemy implicit dependecies

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -2784,6 +2784,16 @@
   implicit-imports:
     - depends:
         - '.dialects.*'
+        
+- module-name: 'sqlalchemy.sql'
+  implicit-imports:
+    - depends:
+        - 'sqlalchemy.sql.default_comparator'
+
+- module-name: 'sqlalchemy.dialects.mssql'
+  implicit-imports:
+    - depends:
+        - 'sqlalchemy.dialects.mssql.pyodbc'
 
 - module-name: 'srsly.msgpack._packer'
   implicit-imports:
