--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -203,8 +203,8 @@
         "msys",
         "Mult",
         "multidist",
-        "Namify",
         "namedtuples",
+        "Namify",
         "NBOOL",
         "no_docstrings",
         "noelf",
@@ -213,6 +213,7 @@
         "nosite",
         "nowarn",
         "Nuitka",
+        "Numba",
         "numberize",
         "numpy",
         "ob_sval",
@@ -264,12 +265,12 @@
         "Scons",
         "setattrofunc",
         "Setuptools",
-        "subclasscheck",
         "sourcery",
         "ssizeargfunc",
         "startswith",
         "stdlib",
         "strchr",
+        "subclasscheck",
         "sysexit",
         "sysflag",
         "ternaryfunc",
