Standalone: Added missing implicit dependency of "mplcairo".

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -8,6 +8,11 @@
     - depends:
         - '_dbus_bindings'
 
+- module-name: '_mplcairo'
+  implicit-imports:
+    - depends:
+        - 'pydoc'
+
 - module-name: '_mysql'
   implicit-imports:
     - depends:
