--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -3995,6 +3995,13 @@
         prefixes:
           - 'xgboost'
 
+- module-name: 'xgboost.sklearn'
+  anti-bloat:
+    - description: 'remove docstring dependency'
+      replacements_plain:
+        'fit.__doc__ = XGBModel.fit.__doc__.replace(': 'fit.__doc__ = "Fit gradient boosting model".replace('
+      when: 'no_docstrings and no_asserts'
+
 - module-name: 'Xlib.display'
   implicit-imports:
     - depends:
