macOS: Workaround bug in "platform_utils.paths"
* The app path is the correct one to use with Nuitka on macOS.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1658,6 +1658,12 @@
       change_function:
         'setBreak': "'(lambda self: None)'"
 
+- module-name: 'platform_utils.paths'
+  anti-bloat:
+    - description: 'workaround embedded data files bug'
+      change_function:
+        'embedded_data_path': "'(lambda: app_path())'"
+
 - module-name: 'plotly.graph_objects'
   anti-bloat:
     - description: 'remove IPython reference'
