--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -770,6 +770,11 @@
     - depends:
         - '_cffi_backend'
 
+- module-name: 'IPython.core.oinspect'
+  implicit-imports:
+    - depends:
+        - 'pygments.lexers.python'
+
 - module-name: 'jaraco.text'
   data-files:
     patterns:
