Standalone: Add invisible "md__mypyc" dependency for "charset_normalizer" package.
Closes: https://github.com/Nuitka/Nuitka/issues/2020

Refs:
https://github.com/Ousret/charset_normalizer/issues/253
https://github.com/psf/requests/issues/6331
https://github.com/pyinstaller/pyinstaller-hooks-contrib/issues/534

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -211,6 +211,11 @@
     - depends:
         - 'chainer.distributions.utils'
 
+- module-name: 'charset_normalizer'
+  implicit-imports:
+    - depends:
+        - 'charset_normalizer.md__mypyc'
+
 - module-name: 'clr'
   dlls:
     - from_filenames:
