Standalone: Added DLLs for "soundfile" package.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -2889,6 +2889,24 @@
           - 'libportaudio'
       when: 'macos'
 
+- module-name: 'soundfile'
+  dlls:
+    - from_filenames:
+        relative_path: '_soundfile_data'
+        prefixes:
+          - 'libsndfile64bit'
+      when: 'win32 and arch_amd64'
+    - from_filenames:
+        relative_path: '_soundfile_data'
+        prefixes:
+          - 'libsndfile32bit'
+      when: 'win32 and arch_x86'
+    - from_filenames:
+        relative_path: '_soundfile_data'
+        prefixes:
+          - 'libsndfile'
+      when: 'macos'
+
 - module-name: 'sparse'
   options:
     checks:
