added textual to package config

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -3442,6 +3442,13 @@
     patterns:
       - 'data.bin'
 
+- module-name: 'textual'
+  implicit-imports:
+    - depends:
+      - 'pygments.lexers.css'
+      - 'textual.widget'
+      - 'textual.widgets._*'
+
 - module-name: 'thinc.backends.cblas'
   implicit-imports:
     - depends:
