--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -2461,6 +2461,11 @@
         '@jit': ''
       when: 'not use_numba and standalone'
 
+- module-name: 'shapely._geometry_helpers'
+  implicit-imports:
+    - depends:
+        - 'shapely._geos'
+
 - module-name: 'shapely.geometry.base'
   anti-bloat:
     - description: 'remove doctest usage'
@@ -2491,7 +2496,7 @@
     - by_code:
         setup_code: 'import shapely.geos'
         filename_code: 'shapely.geos._lgeos._name'
-      when: 'not anaconda and not win32'
+      when: 'not anaconda and not win32 and version("shapely") < (2,0)'
     # Anaconda or Win32 are forced to specific path.
     - by_code:
         setup_code: 'import shapely.geos'
