Anti-Bloat: Remove checking part of overrides
* It depends on bytecode to do its work, for probably no good
  reason, but we don't need to to happen when compiled anyway, it just
  wastes time.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1350,6 +1350,12 @@
         - 'osgeo._ogr'
         - 'osgeo._osr'
 
+- module-name: 'overrides.overrides'
+  anti-bloat:
+    - description: 'disable overrides function checking'
+      change_function:
+        '_overrides': "'(lambda method, *args, **kwargs: method)'"
+
 - module-name: 'panda3d'
   data-files:
     dest_path: '.'
