Python3.11: Handle other context manager error messages too
* Clarified to the TODO, would make slightly sense for large programs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,8 @@
     },
     "cSpell.words": [
         "__abstractmethods__",
+        "__aenter__",
+        "__aexit__",
         "__cplusplus",
         "__newobj__",
         "__warningregistry__",
