--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ orderedset; python_version >= '3.6' or os.name != "nt"
 subprocess32; python_version == '2.7'
 
 # Onefile compression
-zstandard; python_version >= '3.5'
+zstandard >= 0.15; python_version >= '3.5'
 
 # Plugins need that, but there is an inline copy for old versions too.
 pyyaml; python_version == '2.7' or python_version >= '3.6'
