--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,6 +95,7 @@
         "_wtoi",
         "_XOPEN_SOURCE",
         "abiflags",
+        "abspath",
         "abstractmethod",
         "abstractproperty",
         "appdirs",
@@ -174,6 +175,7 @@
         "inplace",
         "iolddiv",
         "ipython",
+        "isabs",
         "isdir",
         "isfile",
         "isgen",
